2004-02-10  Ole Laursen  <olau@hardworking.dk>
	* da.po: Updated Danish translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12342 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/da.po
+++ b/tips/da.po
@@ -1,6 +1,6 @@
 # Danish translation of GIMP tips.
-# Copyright (C) 2002, 03 Free Software Foundation, Inc.
-# Ole Laursen <olau@hardworking.dk>, 2002, 03.
+# Copyright (C) 2002, 03, 04 Free Software Foundation, Inc.
+# Ole Laursen <olau@hardworking.dk>, 2002, 03, 04.
 #
 # Se ../po/da.po for en liste over konventioner i Gimp'en.
 #
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GIMP tips\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-07-21 00:18+0200\n"
-"PO-Revision-Date: 2003-08-25 21:23+0200\n"
+"POT-Creation-Date: 2004-02-10 21:48+0100\n"
+"PO-Revision-Date: 2004-02-10 21:48+0100\n"
 "Last-Translator: Ole Laursen <olau@hardworking.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -46,11 +46,11 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:5
 msgid ""
-"<tt>Ctrl</tt>-drag with the Transform tool in rotation mode will constrain "
-"the rotation to 15 degree angles."
+"<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
+"degree angles."
 msgstr ""
-"Træk med <tt>Ctrl</tt> holdt nede med transformeringsværktøjet i "
-"rotationstilstand vil begrænse rotationen til 15 graders vinkler."
+"<tt>Ctrl</tt>-træk med roteringsværktøjet vil begrænse rotationen til 15 "
+"graders vinkler."
 
 #: tips/gimp-tips.xml.in.h:6
 msgid ""
@@ -77,13 +77,13 @@ msgstr ""
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
-"menu item, and pressing the desired key combination. This is saved when you "
-"exit GIMP."
+"menu item, and pressing the desired key combination. If \"Save Keyboard "
+"Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
-"Hvis du aktiverer \"Dynamiske tastegenveje\", kan du omdefinere "
-"genvejstaster i menuerne. Bring en menu frem, peg på et menupunkt og tryk "
-"den nye tastekombination. Genvejen virker med samme og bliver gemt når du "
-"afslutter Gimp'en."
+"Hvis du aktiverer \"Dynamiske tastegenveje\" under indstillingerne, kan du "
+"omdefinere genvejstaster i menuerne. Bring en menu frem, peg på et menupunkt "
+"og tryk den ønskede tastekombination. Genvejen bliver gemt når du afslutter "
+"Gimp'en hvis \"Gem tastegenveje\" er aktiveret."
 
 #: tips/gimp-tips.xml.in.h:9
 msgid ""
@@ -109,14 +109,13 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:11
 msgid ""
-"If you stroke a path (Edit-&gt;Stroke), the current drawing tool and its "
-"settings are used. You can use the Paintbrush in gradient mode, the Clone "
-"tool with a pattern or even the Eraser or the Smudge tool."
+"If you stroke a path (Edit-&gt;Stroke Path), the paint tools can be used "
+"with their current settings. You can use the Paintbrush in gradient mode or "
+"even the Eraser or the Smudge tool."
 msgstr ""
-"Hvis du bestryger en bane (Redigér-&gt;Bestryg) bliver det aktive "
-"tegneværktøj og dets indstillinger brugt. Du kan bruge malerpenslen i "
-"farveovergangstilstand, kloningsværktøjet med et mønster eller endda "
-"viskelæderet eller udtværingsværktøjet."
+"Hvis du bestryger en bane (Redigér-&gt;Bestryg bane), kan tegneværktøjerne "
+"bruges med deres aktuelle indstillinger. Du kan bruge malerpenslen i "
+"farveovergangstilstand, eller endda viskelæderet eller udtværingsværktøjet."
 
 #: tips/gimp-tips.xml.in.h:12
 msgid ""
@@ -130,12 +129,13 @@ msgstr ""
 #: tips/gimp-tips.xml.in.h:13
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
-"you will have to merge all layers (Layers-&gt;Flatten Image) if you want the "
+"you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "De fleste udvidelsesmoduler arbejder på det aktive lag eller det aktive "
-"billede. I nogle tilfælde bliver du nødt til at slå alle lagene sammen (Lag-"
-"&gt;Fladgør billede) hvis du vil have modulet til at virke på hele billedet."
+"billede. I nogle tilfælde bliver du nødt til at slå alle lagene sammen "
+"(Billede-&gt;Fladgør billede) hvis du vil have modulet til at virke på hele "
+"billedet."
 
 #: tips/gimp-tips.xml.in.h:14
 msgid ""
@@ -149,13 +149,14 @@ msgstr ""
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
-"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Add Alpha Channel) or "
-"flatten it (Layers-&gt;Flatten Image)."
+"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
+"Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
 "Ikke alle effekter kan bruges på alle typer billeder. Dette bliver indikeret "
 "ved et gråtonet menupunkt. Du får måske bruge for at ændre billedtilstanden "
-"til RGB (Billede-&gt;Tilstand-&gt;RGB), tilføje en alfakanal (Lag-&gt;Tilføj "
-"alfakanal) eller fladgøre det (Lag-&gt;Fladgør billede)."
+"til RGB (Billede-&gt;Tilstand-&gt;RGB), tilføje en alfakanal (Lag-&gt;"
+"Gennemsigtighed&gt;Tilføj alfakanal) eller fladgøre det (Billede-&gt;Fladgør "
+"billede)."
 
 #: tips/gimp-tips.xml.in.h:16
 msgid ""
@@ -226,16 +227,6 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:22
 msgid ""
-"Using Edit-&gt;Stroke allows you to draw simple squares or circles by "
-"painting the edge of your current selection with the active brush. More "
-"complex shapes can be drawn with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"Rediger-&gt;Bestryg lader dig tegne simple firkanter eller cirkler ved at "
-"male kanten af den aktuelle markering med den aktive pensel. Mere komplekse "
-"figurer kan tegnes med Filtre-&gt;Generér-&gt;Figurer."
-
-#: tips/gimp-tips.xml.in.h:23
-msgid ""
 "When using a drawing tool (Paintbrush, Airbrush, or Pencil), <tt>Shift</tt>-"
 "click will draw a straight line from your last drawing point to your current "
 "cursor position. If you also press <tt>Ctrl</tt>, the line will be "
@@ -246,7 +237,7 @@ msgstr ""
 "tegnepunkt til den nuværende markørposition. Hvis du også trykker på "
 "<tt>Ctrl</tt>, tvinges linjen til at følge 15 graders vinkler."
 
-#: tips/gimp-tips.xml.in.h:24
+#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When you save an image to work on it again later, try using XCF, the GIMP's "
 "native file format (use the file extension <tt>.xcf</tt>). This preserves "
@@ -258,12 +249,17 @@ msgstr ""
 "bevarer lagene og alle andre aspekter af dit igangværende arbejde. Når et "
 "projekt er færdigt, kan du gemme det som JPEG, PNG, GIF, ..."
 
-#: tips/gimp-tips.xml.in.h:25
-msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#: tips/gimp-tips.xml.in.h:24
+msgid ""
+"You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If this "
+"makes the window move, your window manager uses the <tt>Alt</tt> key "
+"already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
-"Du kan tilpasse og flytte en markering med træk med <tt>Alt</tt> holdt nede."
+"Du kan justere og genplacere en markering ved at bruge <tt>Alt</tt>-træk. "
+"Hvis dette får vinduet til at flytte sig, bruger din vindueshåndtering "
+"allerede <tt>Alt</tt>-tasten. Prøv at trykke på skiftetasten på samme tid."
 
-#: tips/gimp-tips.xml.in.h:26
+#: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
@@ -271,17 +267,17 @@ msgstr ""
 "Du kan tilpasse markeringsintervallet for udflydende markering ved at klikke "
 "og trække til højre eller venstre."
 
-#: tips/gimp-tips.xml.in.h:27
+#: tips/gimp-tips.xml.in.h:26
 msgid ""
-"You can create and edit complex selections using the Bezier tool. The Paths "
+"You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
-"Du kan oprette og redigere komplekse markeringer med Bezier-værktøjet. "
-"\"Baner\"-vinduet lader dig arbejde på flere baner og så konvertere dem til "
+"Du kan oprette og redigere komplekse markeringer med Bane-værktøjet. \"Baner"
+"\"-vinduet lader dig arbejde på flere baner og så konvertere dem til "
 "markeringer."
 
-#: tips/gimp-tips.xml.in.h:28
+#: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
@@ -289,7 +285,7 @@ msgstr ""
 "Du kan trække et lag fra \"Lag\"-vinduet og slippe det i værktøjskassen. "
 "Dette opretter et nyt billede som kun indeholder det lag."
 
-#: tips/gimp-tips.xml.in.h:29
+#: tips/gimp-tips.xml.in.h:28
 msgid ""
 "You can drag and drop many things in the GIMP. For example, dragging a color "
 "from the toolbox or from a color palette and dropping it into an image will "
@@ -298,6 +294,17 @@ msgstr ""
 "Du kan trække og slippe mange ting i Gimp'en. Hvis du f.eks. trækker en "
 "farve fra værktøjskassen eller fra en farvepalet og slipper det i et "
 "billede, vil billedet eller det markerede bliver fyldt ud med den farve."
+
+#: tips/gimp-tips.xml.in.h:29
+msgid ""
+"You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
+"strokes the edge of your current selection. More complex shapes can be drawn "
+"using the Path tool or with Filters-&gt;Render-&gt;Gfig."
+msgstr ""
+"Du kan tegne simple firkanter eller cirkler med Rediger-&gt;Bestryg "
+"markering. Det bestryger kanten af den aktuelle markering. Mere komplekse "
+"figurer kan tegnes med baneværktøjet eller med Filtre-&gt;Generér-&gt;"
+"Figurer."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -365,3 +372,8 @@ msgstr ""
 "hurtigmaskeknappen for neden til venstre i et billedvindue. Ændr det "
 "markerede ved at tegne i billedet og klikke på knappen igen for at "
 "konvertere det tilbage til en normal markering."
+
+#~ msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#~ msgstr ""
+#~ "Du kan tilpasse og flytte en markering med træk med <tt>Alt</tt> holdt "
+#~ "nede."
