--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-10  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-02-10  Jan Morén  <jan.moren@lucs.lu.se>
  
 	* sv.po: Updated Swedish translation.
