--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-10  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/preferences-dialog.c (prefs_dialog_new): removed "Default"
+	prefix from "Navigation Preview Size" label again.
+
 2004-02-10  Henrik Brix Andersen  <brix@gimp.org>
 
 	* app/gui/preferences-dialog.c (prefs_dialog_new): prefix preview
